--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropdown": "^1.11.0",
+    "react-icons": "^5.5.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
